# tree-sitter-gcc

./: .envrc  .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.org  binding.gyp  go.mod  grammar.js  manifest.scm  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-gcc.pc.in
bindings/c/tree_sitter/: tree-sitter-gcc.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_gcc/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterGCCTests/: TreeSitterGCCTests.swift
