[package]
name = "tree-sitter-gcc"
description = "Tree-sitter grammars for GCC Internals, including Machine Description, RTL, GIMPLE, and match.pd files."
version = "0.1.0"
authors = ["Raven Hallsby <raven@hallsby.com>"]
license = "GPL v3.0 or later"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "gcc"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/karljoad/tree-sitter.gcc"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.3"
