[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-gcc"
description = "Tree-sitter grammars for GCC Internals, including Machine Description, RTL, GIMPLE, and match.pd files."
version = "0.1.0"
keywords = ["incremental", "parsing", "tree-sitter", "gcc"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "Raven Hallsby", email = "raven@hallsby.com" }]
requires-python = ">=3.10"
license.text = "GPL v3.0 or later"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/karljoad/tree-sitter.gcc"

[project.optional-dependencies]
core = ["tree-sitter~=0.24"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
